--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,34 @@
   text-align: center;
 }
 
+.copy {
+  text-align: center;
+  padding: 15px;
+  margin-left: 25%;
+  margin-right: 25%;
+}
+
+.resume {
+color: seagreen;
+text-decoration: underline;
+}
+
+.linkedin {
+  width: 50px;
+	height: 50px;
+	margin-bottom: 50px;
+}
+
+.Photo {
+  width: 20%;
+  display: block;  
+  margin-left: auto;  
+  margin-right: auto;  
+}
+
+.image1 {
+  width: 15%;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -25,7 +53,16 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #010607;
+}
+
+.footer{
+  margin-top: 60px;
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 20px;
+  color: black;
+  font-family: fantasy;
 }
 
 @keyframes App-logo-spin {
