--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+.header {
+  background-color: lightblue;
+  margin: 0;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+nav {
+  display: flex;
+  justify-content: space-evenly;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +17,21 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: lightgray;
+}
+
+div.container {
+  text-align: center;
+}
+
+ul.myUL {
+	list-style: square;
+  display: inline-block;
+  text-align: left;
+}
+
+ul.proj {
+  list-style: none;
 }
 
 code {
